# Pymonster-Project

./: .gitignore  README.md  Readme2  Readme2.md  index.html  pyproject.toml
docs/: conf.py  explanations.rst  how-tos.rst  tutorials.rst
docs/_build/doctrees/: environment.pickle  explanations.doctree  how-tos.doctree  index.doctree  tutorials.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/pymonster/: index.doctree
docs/_build/doctrees/autoapi/pymonster/module_1/: index.doctree
docs/_build/doctrees/autoapi/pymonster/module_2/: index.doctree
docs/_build/html/: .buildinfo  explanations.html  genindex.html  how-tos.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/pymonster/: index.html
pymonster/: __init__.py  beast.py  client.py  controller.py  logger.py  logic.py  sample_client.py  utils.py
pymonster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_beast_chase_food.py  test_beast_enemy_helpers_and_escape.py  test_beast_helpers_energy_and_clamp.py  test_beast_hunt_and_kill.py  test_beast_is_safe_move.py  test_beast_parse_and_locate_food.py  test_beast_score_food_lookahead.py  test_beast_simulation_and_food_moves.py  test_beast_split.py  test_controller_roles.py  test_logic_collision_and_moves.py  test_logic_helper_functions.py
(+8 files in other folders)
